# Zuno

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  txns.json
contracts/programs/verifier_stub/: Cargo.toml
contracts/programs/verifier_stub/src/: lib.rs
contracts/programs/zuno/: Cargo.toml
contracts/programs/zuno/src/: constants.rs  error.rs  lib.rs  state.rs  verifier.rs
contracts/programs/zuno/src/instructions/: call_zuno.rs  claim_victory.rs  consume_randomness.rs  draw_card.rs  force_skip.rs  initialize_room.rs  join_room.rs  mod.rs  play_card.rs  punish_zuno.rs  reveal_randomness.rs  start_game.rs
contracts/programs/zuno/test_snapshots/instructions/claim_victory/tests/: test_claim_victory_happy.1.json  test_claim_victory_not_active.1.json  test_claim_victory_wrong_player.1.json
contracts/programs/zuno/test_snapshots/instructions/initialize_room/tests/: test_initialize_room_creates_room_with_host_first_player.1.json  test_initialize_room_rejects_duplicate_room_id.1.json  test_initialize_room_rejects_wrong_seed_length.1.json  test_initialize_room_stores_seed_commitment.1.json  test_initialize_room_transfers_stake_to_contract.1.json
contracts/programs/zuno/test_snapshots/instructions/join_room/tests/: test_join_room_adds_player_to_room.1.json  test_join_room_enforces_max_players.1.json  test_join_room_fails_after_game_start.1.json  test_join_room_rejects_already_joined_player.1.json  (+3 more)
contracts/programs/zuno/test_snapshots/state/tests/: test_player_state_save_and_load.1.json  test_save_and_load_round_trip.1.json
(+76 files in other folders)
