[package]
name = "zuno"
version = "0.1.0"
description = "Zuno - Fully On-Chain ZK Card Game (Soroban)"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "zuno"

[features]
# `no-default-features` builds a Soroban-friendly WASM that omits the
# default Soroban host helpers that we do not need.
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc", "testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
lto = true

[profile.test]
opt-level = 1
